GUI updated to support logging
More logging related changes